--- a/css/style.css
+++ b/css/style.css
@@ -78,14 +78,14 @@ p {
 .btn {
   display: inline-block;
   color: #fff;
-  background: #93cb52;
+  /*background: #93cb52;*/
   padding: 0.5rem 2rem;
-  border: none;
+  border: 2px solid #fff;
   border-radius: 5px;
 }
 
 .btn:hover {
-  background: #7ab436;
+  border: 3px solid #7ab436;
 }
 
 .btn-dark {
@@ -108,7 +108,7 @@ p {
   display: flex;
   position: sticky;
   top:0;
-  background: #333;
+  background: transparent;
   color: #fff;
   justify-content: space-between;
   z-index: 1;
@@ -128,14 +128,14 @@ p {
 }
 
 #navbar ul li a:hover {
-  background: #93cb52;
-  border-radius: 5px;
+  color: #93cb52;
+  /*border-radius: 5px;*/
 }
 
 /* Showcase */
 #showcase {
   background: linear-gradient(rgba(51, 51, 51, 0.616),rgba(51, 51, 51, 0.616)), url('../img/showcase.jpg') no-repeat center center/cover;
-  height: 604px;
+  height: 100vh;
   color: #fff;
 }
 
